# vite-webassembly-demo

./: .rsw.json  package-lock.json  package.json  vite.config.ts
picture-wasm/: Cargo.toml
picture-wasm/src/: lib.rs
src/: App.tsx
